<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Light Reading</string>
	<string name="cannot_init_book">Cannot initialize book info</string>
	<string name="clear_book">Empty bookshelf</string>
	<string name="file_not_exists">File does not exists, would you like to remove it?</string>
	<string name="invalid_config">Configuration file invalid, please empty list and refresh!</string>
	<string name="no_book">No books, click to search</string>
	<string name="no_storage_permission">No storage permission</string>
	<string name="open_now">Open Now</string>
	<string name="search_book">Search Book</string>
	<string name="should_allow_permission">Use \"App Settings -> Permission Settings\" to enable storage permission</string>
	<string name="topic">Topic</string>
	<string name="font_zoom_in">Zoom In</string>
	<string name="font_zoom_out">Zoom Out</string>
	<string name="read_pages">Reading Progress</string>
	<string name="setting">Setting</string>
	<string name="options">Options</string>
	<string name="index">Index</string>
	<string name="prev_topic">Next Topic</string>
	<string name="next_topic">Prev Topic</string>
	<string name="font_size">Font Size</string>
	<string name="scene">Scene</string>
	<string name="sunshine_mode">Sunshine</string>
	<string name="eye_care_mode">Eye Care</string>
	<string name="small">Small</string>
	<string name="normal">Normal</string>
	<string name="big">Big</string>
	<string name="more">More</string>
	<string name="settings">Settings</string>
	<string name="custom_topic_rule">Custom Topic Matching Rule</string>
	<string name="lock_screen_delay">Prevent Lock Screen</string>
	<string name="system_default">System Default</string>
	<string name="use_default">Default</string>
	<string name="click_to_flip">Click To Flip</string>
	<string name="delete_item">Delete</string>
	<string name="split_topic">Re-Split Topic</string>
	<string name="invalid_rule">Invalid rule definition！</string>
	<string name="ok">OK</string>
	<string name="cancel">CANCEL</string>
	<string name="topic_rule">TOPIC RULE</string>
	<string name="reset">RESET</string>
	<string name="upload_book">Upload Book</string>
	<string name="about">About</string>
	<string name="about_me">\nVersion: %1$s\n</string>
	<string name="confirm_to_clear">Empty bookshelf will cause clear all reading progress info, are you sure?</string>
	<string name="need_wifi">Please connect WIFI to upload!</string>
	<string name="use_browser">Please use PC browser to open：\nhttp://%1$s:%2$d</string>
	<string name="interchange">Book Interchange</string>
	<string name="check_update">Check Update</string>
	<string name="upgrade">UPGRADE</string>
	<string name="upToDate">Already up to date！</string>
	<string name="downloading">Downloading...</string>
	<string name="no_explanation_found">No explanation found!</string>
	<string name="use_volume_button_to_flip">Use Volume Button to Flip</string>
	<string name="feedback">Feedback</string>
	<string name="button_add">Add New Rule</string>
</resources>
